; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-skynet.c_lpackstring.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-skynet.c_lpackstring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lpackstring to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lpackstring(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @luaseri_pack(i32* %5)
  %7 = load i32*, i32** %2, align 8
  %8 = call i64 @lua_touserdata(i32* %7, i32 -2)
  %9 = inttoptr i64 %8 to i8*
  store i8* %9, i8** %3, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @lua_tointeger(i32* %10, i32 -1)
  store i32 %11, i32* %4, align 4
  %12 = load i32*, i32** %2, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @lua_pushlstring(i32* %12, i8* %13, i32 %14)
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @skynet_free(i8* %16)
  ret i32 1
}

declare dso_local i32 @luaseri_pack(i32*) #1

declare dso_local i64 @lua_touserdata(i32*, i32) #1

declare dso_local i32 @lua_tointeger(i32*, i32) #1

declare dso_local i32 @lua_pushlstring(i32*, i8*, i32) #1

declare dso_local i32 @skynet_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
